remove RegionService
